# micropython-stubs

./: .actrc  .all-contributorsrc  .coverage  .gitattributes  .gitignore  .libcst.codemod.yaml  .mailmap  .readthedocs.yaml  LICENSE.md  Manual stub build chain.ipynb  README.md  all-stubs  all_modules.json  build_all_modules.py  check_view.py  code  downloads.md  find_undoc_funcs.ipynb  firmware_flat.md  firmware_grp.md  firmwares.md  justfile  lgtm.yml  mpremote_mip.patch  not_found.txt  publish-stubs.ps1  pymakr.conf  pyproject.toml  pyrightconfig.json  requirements-stats.txt  requirements-test.txt  requirements.txt  selfhosted-runner.md  setup_micropython_stubs.py  temp_working_main.py  test_db_query.py  test_publish.ps1  update-stubs.ps1  update_all_modules.py
publish/micropython-core-stubs/: README.md  pyproject.toml
publish/micropython-doc-stubs/: README.md  pyproject.toml
publish/micropython-esp32-generic-stubs/: pyproject.toml  readme.md
publish/micropython-stdlib-minimal/: README.md  pyproject.toml
publish/micropython-stdlib-stubs/: .gitignore  LICENSE.md  README.md  build.py  creation.md  publish.ipynb  pyproject.toml  pyrightconfig.json  reduce_stdlib.ipynb  typeshed_commit.txt  update.md  update.py
publish/micropython-v1_18-rp2-stubs/: README.md  builtins.py  cmath.pyi  collections.py  collections.pyi  doc_stubs.json  gc.py  hashlib.py  io.py  io.pyi  json.py  machine.py  machine.pyi  math.pyi  network.py  network.pyi  os.py  os.pyi  package.json  pycopy.pyi  pyproject.toml  random.py  select.pyi  socket.py  socket.pyi  sys.py  time.pyi  uarray.pyi  ubinascii.pyi  ubluetooth.pyi  uheapq.py  uio.pyi  ustruct.py  usys.py  utokenize.py  zlib.pyi
publish/micropython-v1_19_1-esp32-s3-stubs/: README.md  _onewire.py  _thread.py  array.py  cmath.py  doc_stubs.json  errno.py  gc.py  hashlib.py  heapq.py  io.py  machine.py  math.py  network.py  os.py  package.json  pyproject.toml  random.py  select.py  sys.py  ubluetooth.py  ucryptolib.py  uctypes.py  ujson.py  upip_utarfile.py  ustruct.py  utime.py  utimeq.py  uwebsocket.py  uzlib.py  websocket_helper.py  zlib.py
publish/micropython-v1_19_1-esp32-stubs/: README.md  _thread.py  _uasyncio.py  array.pyi  binascii.py  cmath.py  cmath.pyi  doc_stubs.json  esp.py  esp.pyi  esp32.py  esp32.pyi  flashbdev.pyi  framebuf.py  gc.py  hashlib.pyi  heapq.py  machine.pyi  math.pyi  neopixel.pyi  network.py  network.pyi  os.py  os.pyi  package.json  pycopy_imphook.pyi  pyproject.toml  random.pyi  select.py  select.pyi  ssl.py  struct.pyi  sys.pyi  time.pyi  ubinascii.py  ubinascii.pyi  ubluetooth.py  ubluetooth.pyi  ucollections.pyi  ucryptolib.pyi  (+10 more)
publish/micropython-v1_19_1-esp32-um_tinypico-stubs/: README.md  _thread.pyi  _uasyncio.pyi  apa106.pyi  array.py  array.pyi  binascii.pyi  btree.py  btree.pyi  cmath.pyi  dht.pyi  dotstar.pyi  ds18x20.pyi  esp.pyi  esp32.pyi  ffi.pyi  flashbdev.pyi  framebuf.pyi  gc.pyi  hashlib.py  hashlib.pyi  inisetup.pyi  machine.pyi  math.py  math.pyi  micropython.pyi  micropython_.pyi  neopixel.pyi  network.pyi  ntptime.pyi  onewire.pyi  os.pyi  package.json  pycopy.pyi  pyproject.toml  socket.py  socket.pyi  struct.pyi  sys.pyi  time.pyi  (+26 more)
publish/micropython-v1_19_1-esp8266-stubs/: README.md  array.py  binascii.py  binascii.pyi  btree.py  btree.pyi  builtins.py  doc_stubs.json  esp.py  esp.pyi  firmware_stubs.json  flashbdev.pyi  hashlib.py  heapq.py  inisetup.pyi  io.pyi  json.py  lwip.py  machine.py  machine.pyi  math.py  math.pyi  network.pyi  os.py  os.pyi  package.json  pyproject.toml  random.py  random.pyi  select.py  socket.py  socket.pyi  ssl.pyi  struct.py  sys.py  sys.pyi  time.py  uarray.pyi  ucollections.pyi  uheapq.py  (+12 more)
publish/micropython-v1_19_1-rp2-stubs/: README.md  _rp2.pyi  _thread.pyi  cmath.pyi  doc_stubs.json  ds18x20.pyi  errno.pyi  hashlib.pyi  lsm6dsox.pyi  machine.pyi  network.pyi  os.pyi  package.json  pyproject.toml  random.pyi  rp2.pyi  socket.pyi  ubinascii.pyi  ubluetooth.pyi  ucollections.pyi  ucryptolib.pyi  uheapq.pyi  uio.pyi  ujson.pyi  umachine.pyi  uos.pyi  usocket.pyi  utime.pyi  utokenize.pyi  websocket_helper.pyi
publish/micropython-v1_19_1-stm32-stubs/: README.md  array.py  array.pyi  binascii.py  cmath.py  doc_stubs.json  errno.py  firmware_stubs.json  framebuf.pyi  gc.pyi  hashlib.py  hashlib.pyi  lcd160cr.pyi  lcd160cr_test.pyi  logging.py  machine.pyi  math.py  micropython.pyi  network.py  network.pyi  os.pyi  package.json  pyb.pyi  pyproject.toml  random.py  select.py  select.pyi  socket.pyi  stm.pyi  sys.py  time.pyi  ubinascii.pyi  uerrno.pyi  uhashlib.pyi  uheapq.py  uio.pyi  ujson.pyi  umachine.pyi  usocket.pyi  ussl.pyi  (+3 more)
publish/micropython-v1_20_0-samd-seeed_wio_terminal-stubs/: README.md  errno.pyi  framebuf.pyi  machine.pyi  math.pyi  package.json  pyproject.toml  sys.pyi  uhashlib.pyi  uio.pyi  umachine.pyi  uos.pyi
publish/micropython-v1_21_0-esp32-stubs/: README.md  __builtins__.pyi  _espnow.pyi  _thread.pyi  array.pyi  btree.pyi  esp.pyi  esp32.pyi  espnow.pyi  io.pyi  machine.pyi  math.pyi  neopixel.pyi  package.json  platform.pyi  pyproject.toml  random.pyi  socket.pyi  sys.pyi  uarray.pyi  uerrno.pyi  uio.pyi  ujson.pyi  umachine.pyi  uos.pyi  uselect.pyi  ussl.pyi  ustruct.pyi
publish/micropython-v1_21_0-webassembly-stubs/: README.md  deflate.pyi  framebuf.pyi  logging.pyi  math.pyi  os.pyi  pyproject.toml  sys.pyi  ucollections.pyi  uctypes.pyi  utime.pyi
publish/micropython-v1_22_1-rp2-rpi_pico_w-stubs/: README.md  _asyncio.pyi  _onewire.pyi  _rp2.pyi  _thread.pyi  binascii.pyi  bluetooth.pyi  cmath.pyi  cryptolib.pyi  deflate.pyi  errno.pyi  framebuf.pyi  gc.pyi  hashlib.pyi  heapq.pyi  io.pyi  json.pyi  lwip.pyi  machine.pyi  math.pyi  network.pyi  os.pyi  platform.pyi  pyproject.toml  random.pyi  rp2.pyi  select.pyi  socket.pyi  ssl.pyi  sys.pyi  time.pyi  ubinascii.pyi  ubluetooth.pyi  ucollections.pyi  uctypes.pyi  uerrno.pyi  uhashlib.pyi  uheapq.pyi  uio.pyi  umachine.pyi  (+8 more)
publish/micropython-v1_22_1-rp2-stubs/: README.md  _asyncio.pyi  _onewire.pyi  _thread.pyi  array.pyi  cmath.pyi  deflate.pyi  doc_stubs.json  (+18 more)
(+39189 files in other folders)
