[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "micropython-stubs"
authors = [{ name = "Jos Verlinde", email = "jos_verlinde@hotmail.com"}]

description = "The MicroPython stubs project"
version = "1.28.0"
classifiers = [
  "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: MicroPython"
]
readme = "README.md"
license = "MIT"
dependencies = []

[tool.hatch.build.targets.wheel]
only-include = ["README.md", "LICENSE.md"]

[project.optional-dependencies]
# uv pip install -r pyproject.toml --extra stubber --prerelease=allow
stubber = [
  "micropython-stubber>=v1.28.0",
  "mpflash>=1.28.0"
]

test = [
"micropython-stubber",
"rich-click",
# for quality reporting
"pytest",
"pytest-xdist",
"pyright>=1.1.341",
"mypy",
"ruff",
"fasteners",
"python-dotenv",
"pydocstyle",
"loguru",
"mypy_gitlab_code_quality",
"requests",
]

stats = [
"ipykernel",
"google-cloud-bigquery>=3.12.0",
"pandas",
"matplotlib",
# interactive matplotlib figures in jupyter
"ipywidgets ",
"ipympl",
]

docs =[
"Sphinx>= 4",
"myst-parser >= 0.15",
"sphinxcontrib-mermaid",
"sphinx_rtd_theme",
"sphinx-autoapi>= 1.8",
"Jinja2>= 3.0",
"pandas>= 2.2.2",

]

[tool.micropython-stubber]
# New config
"mpy-stubs-path" = "."

#-----------------
# < v1.18 config
# stub-path = "./stubs"
# publish-path = "./publish"
# template-path = "./publish/template"
#-----------------

# pyright options:

[tool.pyright]
include = ["scratch"]
ignore = ["**/typings"]
exclude = [".*", "__*", "**/typings", "repos", "stubs", "publish", "tests", "docs", "data", "statistics", "scripts"]

typeCheckingMode = "basic"
stubPath = "typings"
typeshedPath = "typings"
extraPaths = ["scratch"]
pythonPlatform = "Linux"

reportMissingModuleSource = "none"
reportUnnecessaryTypeIgnoreComment = "error"

# ###################################################################
# mypy global options:
[tool.mypy]
platform = "linux"
mypy_path = "typings"
custom_typeshed_dir = "typings" # allow mypy to use micropython-stdlib
files = "*.py"
exclude = [
    "typings[\\/].*", # TOML basic string 
]

follow_imports = "silent"
follow_imports_for_stubs = true
no_site_packages = true
check_untyped_defs = true
disable_error_code = ["no-redef", "assignment", "var-annotated"]

# snippets may re-use the same variable names
allow_redefinition = true

# other optional settings
warn_unused_ignores = true  # allows to verify the absense of methods/classes in stubs 
# warn_unused_configs = true
# show_error_context = true





#-----------------
[tool.black]
# use same config as -stubber
line-length = 140
include = '\.pyi?$'
exclude = '''
(
    /(
        | tests
    )/
)
'''

[tool.pytest.ini_options]
minversion = "7.0"
python_functions = ["test_", "*_test"]
python_files = ["test_*.py", "*_test.py"]
testpaths = [
    "tests",
    ]
norecursedirs = [
    "publish",
    "stubs",
    "repos",
    "typings*",
    ".svn",
    "_build",
    "tmp*",
    ".*",
    "build",
    "dist",
    "{arch}",
    "*.egg",
]
junit_family = "xunit1"

addopts = "--verbose --capture=no -p no:doctest"

#  -m 'not snippets'
# -m MARKEXPR           Only run tests matching given mark expression. For example: -m 'mark1 and not mark2'.
# -n --numprocesses=numprocesses - number of parallel workers (pytest-xdist)

markers = ["snippets: test snippets to check the stub quality"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.

# Same as Black.
line-length = 140
indent-width = 4

#Stubs should be usable Python 3.9
target-version = "py39"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
exclude = [".*", "__*", "dist", "repos"]

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
exclude = [".*", "__*", "dist", "repos"]

extend-select = [
    # "E501", # line too long
    # "UP", # pyupgrade
    "PYI", # flake8-pyi - stub file specific checks
]
ignore = [
    "F401", # unused import
    "F403", # import *
    "F821",
    "E402", # module level import not at top of file - common in test snippets
    "UP035", # pyupgrade `typing.Dict` is deprecated, use `dict` instead
    "PYI021", # Docstrings should not be included in stubs (but we want them for MicroPython)
    "PYI044", # `from __future__ import annotations` - used in generated stubs
    "PYI048", # Function body must contain exactly one statement - docstrings count
    "PYI011", # Only simple default values allowed for typed arguments - we want actual defaults
    "PYI014", # Only simple default values allowed for arguments - we want actual defaults
    "PYI029", # __str__ and __repr__ are useful in MicroPython stubs
]


