[tool.poetry]
name = "micropython-core-stubs"
version = "0.1.1-alpha.1"
description = "Micropython Core stubs"
authors = ["josverl <josverl@users.noreply.github.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://micropython-stubs.readthedocs.io/"
exclude = ["*.ps1", "*.py", "**/__pycache__", "**/dist"]
include = ["**/*.py", "**/*.pyi"]
repository = "https://github.com/josverl/micropython-stubs"
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Operating System :: OS Independent",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Software Development :: Build Tools",
]
packages = [
    { include = "ffi.pyi" },
    { include = "micropython.pyi" },
    { include = "pycopy.pyi" },
    { include = "pycopy_imphook.pyi" },
    { include = "uarray.pyi" },
    { include = "ucollections.pyi" },
    { include = "uctypes.pyi" },
    { include = "uerrno.pyi" },
    { include = "uhashlib.pyi" },
    { include = "uio.pyi" },
    { include = "ujson.pyi" },
    { include = "ulogging.pyi" },
    { include = "uos.pyi" },
    { include = "ure.pyi" },
    { include = "uselect.pyi" },
    { include = "usocket.pyi" },
    { include = "ussl.pyi" },
    { include = "utime.pyi" },
    { include = "utimeq.pyi" },
    { include = "utokenize.pyi" },
    { include = "uzlib.pyi" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
