[tool.poetry]
name = "micropython-doc-stubs"
version = "1.18.1-alpha.2"
description = "Micropython Doc Stubs"
authors = ["josverl <josverl@users.noreply.github.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://micropython-stubs.readthedocs.io/"
exclude = ["*.ps1", "*.py", "**/__pycache__", "**/dist"]
include = ["**/*.py", "**/*.pyi"]
repository = "https://github.com/josverl/micropython-stubs"
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Operating System :: OS Independent",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Software Development :: Build Tools",
]
packages = [
    { include = "array.pyi" },
    { include = "binascii.pyi" },
    { include = "bluetooth.pyi" },
    { include = "btree.pyi" },
    { include = "cmath.pyi" },
    { include = "collections.pyi" },
    { include = "cryptolib.pyi" },
    { include = "errno.pyi" },
    { include = "esp.pyi" },
    { include = "esp32.pyi" },
    { include = "framebuf.pyi" },
    { include = "gc.pyi" },
    { include = "hashlib.pyi" },
    { include = "heapq.pyi" },
    { include = "io.pyi" },
    { include = "json.pyi" },
    { include = "lcd160cr.pyi" },
    { include = "machine.pyi" },
    { include = "math.pyi" },
    { include = "micropython.pyi" },
    { include = "neopixel.pyi" },
    { include = "network.pyi" },
    { include = "os.pyi" },
    { include = "pyb.pyi" },
    { include = "random.pyi" },
    { include = "rp2.pyi" },
    { include = "select.pyi" },
    { include = "socket.pyi" },
    { include = "ssl.pyi" },
    { include = "stm.pyi" },
    { include = "struct.pyi" },
    { include = "sys.pyi" },
    { include = "time.pyi" },
    { include = "uarray.pyi" },
    { include = "ubinascii.pyi" },
    { include = "uctypes.pyi" },
    { include = "uio.pyi" },
    { include = "ujson.pyi" },
    { include = "uos.pyi" },
    { include = "uselect.pyi" },
    { include = "usocket.pyi" },
    { include = "ussl.pyi" },
    { include = "ustruct.pyi" },
    { include = "utime.pyi" },
    { include = "uzlib.pyi" },
    { include = "wipy.pyi" },
    { include = "zephyr.pyi" },
    { include = "zlib.pyi" },
    { include = "_thread.pyi" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
