[project]
name = "micropython-stdlib-stubs"
version = "1.24.1post2"
description = "Micropython stdlib is a reduced and augmented copy of typeshed's stdlib for use by MicroPython stub packages"
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Jos Verlinde", email = "josverl@users.noreply.github.com" },
]

classifiers = [
    "Typing :: Stubs Only",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Operating System :: OS Independent",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Software Development :: Build Tools",
]


[project.urls]
homepage = "https://github.com/josverl/micropython-stubs#micropython-stubs"
documentation = "https://micropython-stubs.readthedocs.io/"
repository = "https://github.com/josverl/micropython-stubs"

[[tool.uv.index]]   # https://docs.astral.sh/uv/reference/settings/#index
name = "testpypi"
explicit = true
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
only-include = ["stdlib", "_mpy_shed", "stubs"]
exclude = ["*.be", ".*"]
