[tool.poetry]
name = "micropython-esp32-s3-stubs"
version = "1.19.1.post1"
description = "MicroPython stubs"
authors = [
    "josverl <josverl@users.noreply.github.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/josverl/micropython-stubs#micropython-stubs"
documentation = "https://micropython-stubs.readthedocs.io/"
exclude = [
    "*.ps1",
    "*.py",
    "**/__pycache__",
    "**/dist",
]
include = [
    "**/*.py",
    "**/*.pyi",
]
repository = "https://github.com/josverl/micropython-stubs"
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Operating System :: OS Independent",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Software Development :: Build Tools",
]
packages = [
    { include = "micropython.pyi" },
    { include = "micropython_.pyi" },
]

[tool.poetry.dependencies]
python = "^3.8"
micropython-stdlib-stubs = ">=0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
