[tool.poetry]
name = "micropython-esp32-um_tinypico-stubs"
version = "1.19.1.post2"
description = "MicroPython stubs"
authors = [
    "josverl <josverl@users.noreply.github.com>",
]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/josverl/micropython-stubs#micropython-stubs"
documentation = "https://micropython-stubs.readthedocs.io/"
exclude = [
    "*.ps1",
    "*.py",
    "**/__pycache__",
    "**/dist",
]
include = [
    "**/*.py",
    "**/*.pyi",
]
repository = "https://github.com/josverl/micropython-stubs"
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Operating System :: OS Independent",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Software Development :: Build Tools",
]
packages = [
    { include = "uasyncio" },
    { include = "_boot.pyi" },
    { include = "_onewire.py" },
    { include = "_thread.py" },
    { include = "_uasyncio.py" },
    { include = "apa106.pyi" },
    { include = "array.py" },
    { include = "binascii.py" },
    { include = "btree.py" },
    { include = "cmath.py" },
    { include = "dht.pyi" },
    { include = "dotstar.pyi" },
    { include = "ds18x20.pyi" },
    { include = "errno.py" },
    { include = "esp.py" },
    { include = "esp32.py" },
    { include = "ffi.pyi" },
    { include = "flashbdev.pyi" },
    { include = "framebuf.py" },
    { include = "gc.py" },
    { include = "hashlib.py" },
    { include = "heapq.py" },
    { include = "inisetup.pyi" },
    { include = "json.py" },
    { include = "machine.py" },
    { include = "math.py" },
    { include = "micropython.pyi" },
    { include = "neopixel.pyi" },
    { include = "network.py" },
    { include = "ntptime.pyi" },
    { include = "onewire.pyi" },
    { include = "os.py" },
    { include = "platform.py" },
    { include = "pycopy.pyi" },
    { include = "pycopy_imphook.pyi" },
    { include = "random.py" },
    { include = "select.py" },
    { include = "socket.py" },
    { include = "ssl.py" },
    { include = "struct.py" },
    { include = "sys.py" },
    { include = "time.py" },
    { include = "tinypico.pyi" },
    { include = "uarray.pyi" },
    { include = "ubinascii.py" },
    { include = "ubluetooth.py" },
    { include = "ucollections.pyi" },
    { include = "ucryptolib.py" },
    { include = "uctypes.pyi" },
    { include = "uerrno.pyi" },
    { include = "uhashlib.pyi" },
    { include = "uheapq.py" },
    { include = "uio.pyi" },
    { include = "ujson.pyi" },
    { include = "ulogging.pyi" },
    { include = "umachine.py" },
    { include = "uos.pyi" },
    { include = "upip.pyi" },
    { include = "upip_utarfile.pyi" },
    { include = "uplatform.py" },
    { include = "urandom.py" },
    { include = "ure.pyi" },
    { include = "urequests.py" },
    { include = "uselect.pyi" },
    { include = "usocket.pyi" },
    { include = "ussl.pyi" },
    { include = "ustruct.py" },
    { include = "usys.py" },
    { include = "utime.pyi" },
    { include = "utimeq.pyi" },
    { include = "utokenize.pyi" },
    { include = "uwebsocket.py" },
    { include = "uzlib.pyi" },
    { include = "webrepl.pyi" },
    { include = "webrepl_setup.pyi" },
    { include = "websocket.py" },
    { include = "websocket_helper.pyi" },
    { include = "zlib.py" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
